feat : front and static