@@ -1,6 +1,5 @@
 package com.rongproject.JavaSprint5_2LibrarySystem.configs;
 
-import com.rongproject.JavaSprint5_2LibrarySystem.configs.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -30,57 +29,58 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // 1. 启用并配置 CORS (跨域)
+                // 1. 必须最先配置 CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // 2. 禁用 CSRF（因为 JWT 不需要 Session）
+                // 2. 禁用 CSRF
                 .csrf(csrf -> csrf.disable())
 
-                // 3. 设置为无状态模式
+                // 3. 无状态模式
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                // 4. 配置权限规则
+                // 4. 权限配置
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/books", "/api/books/{id}").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/covers/**").permitAll() // 允许所有人查看图书封面
+                        .requestMatchers("/api/books/**").permitAll() // 允许匿名看书
                         .requestMatchers("/h2-console/**").permitAll()
+                        // 显式允许 OPTIONS 请求（跨域预检请求）
+                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
                         .anyRequest().authenticated()
                 )
 
-                // 5. 匿名用户配置
-                .anonymous(anonymous -> anonymous
-                        .principal("guestUser")
-                        .authorities("ROLE_ANONYMOUS")
-                )
-
-                // 6. 允许 H2 Console 使用 Frame
                 .headers(headers -> headers.frameOptions(f -> f.disable()));
 
-        // 7. 将 JWT 过滤器放在用户名密码过滤器之前
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // --- 新增：跨域策略定义 ---
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // 允许的前端来源（这里填你前端跑起来的地址，如 http://localhost:5173）
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://127.0.0.1:5173"));
+        // --- 核心修改点：添加 3000 端口 ---
+        // English Comment: Allow Nuxt 3 default port 3000 and Vite default port 5173
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://127.0.0.1:3000",
+                "http://localhost:5173",
+                "http://127.0.0.1:5173"
+        ));
 
-        // 允许的 HTTP 方法
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
-        // 允许的 Header 头部信息
+        // 允许所有 Header，包括 Authorization
         configuration.setAllowedHeaders(List.of("*"));
 
-        // 允许携带 Cookie (如果需要的话)
+        // 允许发送 Cookie
         configuration.setAllowCredentials(true);
 
+        // 预检请求的有效期（秒）
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // 对所有 API 路径生效
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
